# Neiro

./: .gitignore  .graphifyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  Roadmap.txt  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: accessibility.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  model_adapter.yml  performance.yml
.github/workflows/: ci.yml  release.yml
docs/: adding-models.md  architecture.md  daw-vst.md  evaluation.md  models.md  performance.md  plugins.md  roadmap-traceability.md  session.md  ui.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  daw.ts  hooks.ts  types.ts
frontend/src/components/: CollapsibleChrome.tsx  CommandPalette.tsx  EmptyGate.tsx  IntentField.tsx  JobProgress.tsx  JobTray.tsx  ModuleHeader.tsx  PlanStrip.tsx
frontend/src/constants/: options.ts  stemIdentity.ts
frontend/src/hooks/: useChromeCollapsed.ts  useDawBridge.ts
frontend/src/icons/: Icon.tsx  index.ts  set.tsx
frontend/src/modules/: AboutModule.tsx  AnalysisModule.tsx  ImportModule.tsx  LearnModule.tsx  MidiStudioModule.tsx  MixerModule.tsx  PreferencesModule.tsx  RestoreModule.tsx  SeparateModule.tsx  StudioModule.tsx  TranscribeModule.tsx  modules.css  studioTimeline.ts
frontend/src/modules/midi/: MidiPracticePanel.tsx  PianoRollView.tsx  metronome.ts  soundfontPlayer.ts
frontend/src/shell/: AppShell.tsx  shell.css
frontend/src/state/: session.tsx  sessionGraph.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/viz/: webgl.ts
packaging/: build_release.py  neiro.spec  neiro_entry.py
packaging/launchers/: Neiro CLI.bat  Neiro UI.bat  START HERE.txt  install_neiro.py  neiro-cli.sh  neiro-ui.sh
plugins/neiro-clap/: Cargo.toml  README.md
plugins/neiro-clap/src/: http.rs  lib.rs
plugins/neiro-vst/: Cargo.toml
plugins/neiro-vst/src/: lib.rs
scripts/: benchmark.py  bump_version_1_0.py  generate_traceability.py  generate_zoo_manifests.py  install_daw_plugin.sh  live_install_test.bat  matrix_youtube_song.py  update_traceability_status.py  verify_models.py
scripts/eval/: run_extra_corpora.py  run_maestro.py  run_musdb.py  run_synthetic.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/neiro/: __init__.py  cli.py
src/neiro/adapters/: __init__.py  audio_separator_adapter.py  audiosr_adapter.py  basic_pitch_adapter.py  clap_analyze_adapter.py  demucs_adapter.py  drum_transcriber.py  dsp_enhancers.py  dsp_separators.py  dsp_transcriber.py  ensemble_separator.py  ensemble_transcriber.py  larsnet_adapter.py  matchering_adapter.py  medleyvox_adapter.py  mt3_adapter.py  multi_instrument_adapter.py  noise_to_notes_adapter.py  piano_transcription_adapter.py  restoration_adapters.py  scnet_adapter.py  svt_adapter.py  timbre_amt_adapter.py  transkun_adapter.py  voicefixer_adapter.py  whisper_lyrics_adapter.py
src/neiro/analysis/: __init__.py  corrections.py  report.py  restore_recommend.py
src/neiro/dsp/: __init__.py  bleed.py  chunking.py  edit.py  enhance.py  ensemble.py  kit.py  pitch.py  separation.py  stereo.py  visual.py
src/neiro/engine/: __init__.py  artifacts.py  backends.py  cache.py  checkpoint.py  downloader.py  estimator.py  graph.py  planner.py  registry.py  session.py  signing.py  user_plugins.py  vram.py
src/neiro/eval/: __init__.py  corpus.py  datasets.py  metrics.py  midi_reader.py  report.py
src/neiro/io/: __init__.py  dawproject.py  export.py  ingest.py  mmap_audio.py  url_ingest.py  watch.py
src/neiro/manifests/: an-clap.json  basic-pitch.json  dsp-center-ensemble.json  dsp-center.json  dsp-declick.json  dsp-declip.json  dsp-dehum.json  dsp-denoise.json  dsp-drumkit.json  dsp-hpss.json  dsp-normalize.json  dsp-vocal-repair.json  dsp-yin.json  enh-apollo.json  enh-aspiration.json  enh-audiosr.json  enh-bleed-suppressor.json  enh-crowd-mdx.json  enh-crowd-roformer.json  enh-deepfilternet.json  enh-denoise-roformer.json  enh-dereverb-roformer.json  enh-matchering.json  enh-sonicmaster.json  enh-voicefixer.json  enh-vr-deecho.json  enh-vr-denoise.json  enh-vr-dereverb.json  htdemucs.json  sep-bs-roformer-1296.json  sep-bs-roformer-1297.json  sep-bs-roformer-sw.json  sep-crowd-roformer.json  sep-crowd.json  sep-demucs-direct.json  sep-drumsep.json  sep-hdemucs-mmi.json  sep-htdemucs-6s.json  sep-htdemucs-ft.json  sep-karaoke.json  (+31 more)
src/neiro/nodes/: __init__.py  audio_nodes.py  base.py
src/neiro/symbolic/: __init__.py  export_formats.py  lyric_align.py  lyrics.py  midi.py  musicxml.py  notestream_json.py  orchestrate.py  router.py  score.py  session.py  spelling.py  tablature.py  timeline.py
src/neiro/ui/: __init__.py  api_extras.py  daw_bridge.py  index.html  server.py  ws_rpc.py  ws_server.py
src/neiro/ui/static/: index.html
src/neiro/ui/static/assets/: index-6sOJPjdq.css  index-6uxYv8Pw.css  index-BEn_UVyD.js  index-C26Zw4OL.js  index-CYJWaaAW.js  index-CkaZKXzn.js  index-Cr7tKGjI.js  index-CtBPJu7T.js  index-Cw6NxKdz.css  index-D1ONyD_z.css  index-DJnXZxBR.js  index-DZWtMyRJ.js  index-DmLw2_FX.css
src/neiro/util/: __init__.py  subprocess_win.py
tests/: conftest.py  test_api_extras_1_1.py  test_backends.py  test_bleed.py  test_checkpoint_daw_ws.py  test_cli.py  test_daw_bridge.py  test_downloader.py  test_dsp.py  test_editor.py  test_engine.py  test_enhance.py  test_ensemble_and_plans.py  test_eval_harness.py  test_eval_synthetic.py  test_lyric_align.py  test_midi_session.py  test_model_compat.py  test_orchestrate_ensemble.py  test_perceptual.py  test_pipeline.py  test_pitch_correct.py  test_pitch_correct_job.py  test_robustness.py  test_session_and_bleed.py  test_signing.py  test_subprocess_win.py  test_symbolic_exports.py  test_tiers.py  test_transcription.py  test_ui_server.py  test_url_ingest.py  test_user_plugins.py
