[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neiro"
version = "0.3.1"
description = "Local source separation, restoration, and symbolic transcription."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Neiro contributors" }]
keywords = ["audio", "source-separation", "transcription", "music", "dsp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# Heavy neural backends are opt-in; the core engine runs on pure DSP without them.
# Each maps roadmap references to a real, actively-maintained pip package that
# bundles/auto-downloads the pretrained weights (integrated via manifests +
# adapters rather than reimplemented). See docs/models.md.
separation = ["audio-separator>=0.44"]  # BS/Mel-RoFormer, MDX23C, HTDemucs, VR-Arch, karaoke, drumsep
piano = ["piano_transcription_inference>=0.0.5"]  # Kong/ByteDance piano (with pedal)
basicpitch = ["basic-pitch>=0.4"]  # Spotify polyphonic transcription
restoration = ["matchering>=2.0"]  # reference mastering
superres = ["audiosr>=0.0.7"]  # AudioSR bandwidth extension (Python <=3.11)
loudness = ["pyloudnorm>=0.1"]  # ITU-R BS.1770 loudness in the analysis pass
downloader = ["huggingface_hub>=0.20"]  # Hugging Face Hub weight downloads
demucs = ["demucs>=4.0", "torch>=2.1"]  # direct Demucs backend (alternative to audio-separator)
# Convenience bundle: everything that installs cleanly on Python 3.12.
all = [
    "audio-separator>=0.44",
    "piano_transcription_inference>=0.0.5",
    "basic-pitch>=0.4",
    "matchering>=2.0",
    "pyloudnorm>=0.1",
    "huggingface_hub>=0.20",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.6"]

[project.scripts]
neiro = "neiro.cli:main"

[project.urls]
Homepage = "https://github.com/ericcayers-ai/Neiro"
Roadmap = "https://github.com/ericcayers-ai/Neiro/blob/main/roadmap.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neiro = ["manifests/*.json", "ui/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["neiro"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter, not enforced hard
    "B008",   # function calls in argument defaults (argparse patterns)
    "SIM108", # ternary-vs-if is a readability judgement call
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["neiro"]
