[package]
name = "neiro"
version = "1.2.0"
description = "Neiro local audio worksuite shell"
authors = ["Neiro contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.77.2"

[lib]
name = "neiro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
