[package]
name = "neiro-clap"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Neiro CLAP/VST3-shaped DAW bridge stub using the shared local HTTP bridge"
license = "MIT"
authors = ["Neiro contributors"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "neiro_clap"

[dependencies]
